Bug 282792 - Deleting two (or more) attachments does not work
Summary: Deleting two (or more) attachments does not work
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Ingo Klöcker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-26 10:41 UTC by Antonio Rojas
Modified: 2021-05-10 16:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2011-09-26 10:41:10 UTC
Version:           4.7 (using KDE 4.7.1) 
OS:                Linux

kmail hangs when trying to delete an attached file after having deleted another one

Reproducible: Always

Steps to Reproduce:
Open a mail with more than 1 attached file, delete one of them, try to delete another one

Actual Results:  
kmail hangs

Expected Results:  
the attached file is deleted
Comment 1 Laurent Montel 2011-09-26 12:49:30 UTC
Can't reproduce it.
Could you send me in private a mail which hangs ?

Regards
Comment 2 Denis Kurz 2016-09-24 18:13:08 UTC
This bug has only been reported for versions before 4.14, which have been unsupported for at least two years now. Can anyone tell if this bug still present?

If noone confirms this bug for a Framework-based version of kmail2 (version 5.0 or later, as part of KDE Applications 15.12 or later), it gets closed in about three months.
Comment 3 Antonio Rojas 2016-09-24 18:31:38 UTC
Deleting a second attachment still doesn't work (but now kmail doesn't hang anymore)
Comment 4 Ingo Klöcker 2021-05-10 16:19:51 UTC
Git commit 53daeb8493ea7b6e18c019f766b444e5ec7e1e64 by Ingo Klöcker.
Committed on 10/05/2021 at 16:16.
Pushed by kloecker into branch 'master'.

Fix deletion of two (or more) attachments

Deleting the first attachment triggers an update of the message. In case
of IMAP this is done by adding a new message and deleting the old one.
This changes the remote id of the message. The problem was that after
deleting the second attachment the update of the message tried to set
the old remote id. This fails because only the server can set a remote id.
This problem is fixed by clearing the remote id before starting an
ItemModifyJob.

Funded by: Intevation GmbH
FIXED-IN: 5.18.0

M  +4    -0    messageviewer/src/viewer/viewer_p.cpp

https://invent.kde.org/pim/messagelib/commit/53daeb8493ea7b6e18c019f766b444e5ec7e1e64